# main.go
@@ -1,11 +1,14 @@
 package main
 
 import (
-	"encoding/json"
+	"context"
 	"net/http"
+	"time"
+
+	"github.com/application-research/edge-ur/core"
 
 	_ "github.com/gmelodie/estuphotos/docs"
-	"golang.org/x/crypto/bcrypt"
+	"github.com/spf13/viper"
 
 	logging "github.com/ipfs/go-log/v2"
 	"github.com/labstack/echo/v4"
@@ -16,29 +19,50 @@ import (
 )
 
 type Photo struct {
-	ID   uint   `gorm:"primarykey" json:"id"`
-	Name string `json:"name"`
-	User string `json:"user"`
+	ID    uint   `gorm:"primarykey" json:"id"`
+	Name  string `json:"name"`
+	Owner *User  `json:"owner"`
+	CID   string `json:"cid"`
 }
 
 type User struct {
-	ID           uint   `gorm:"primarykey" json:"id"`
-	Handle       string `json:"handle"`
-	Email        string `json:"email"`
-	PasswordHash string `json:"passwordHash"`
+	ID     uint   `gorm:"primarykey" json:"id"`
+	Handle string `json:"handle"`
+	Email  string `json:"email"`
+	ApiKey string `json:"apikey"`
 }
 
 type API struct {
-	DB *gorm.DB
+	DB        *gorm.DB
+	LightNode *core.LightNode
 }
 
-func HashPassword(password string) (string, error) {
-	bytes, err := bcrypt.GenerateFromPassword([]byte(password), 14)
-	return string(bytes), err
+type HttpError struct {
+	Code    int    `json:"code,omitempty"`
+	Reason  string `json:"reason"`
+	Details string `json:"details"`
 }
 
-// check password
-// err := bcrypt.CompareHashAndPassword([]byte(hash), []byte(password))
+func (he HttpError) Error() string {
+	if he.Details == "" {
+		return he.Reason
+	}
+	return he.Reason + ": " + he.Details
+}
+
+func withUser(f func(echo.Context, *User) error) func(echo.Context) error {
+	return func(c echo.Context) error {
+		u, ok := c.Get("user").(*User)
+		if !ok {
+			return &HttpError{
+				Code:    http.StatusUnauthorized,
+				Reason:  "invalid API key",
+				Details: "endpoint not called with proper authentication",
+			}
+		}
+		return f(c, u)
+	}
+}
 
 // handleIndex godoc
 // @Summary  API greeting message
@@ -50,100 +74,94 @@ func (a *API) handleIndex(c echo.Context) error {
 }
 
 // handleUploadPhoto godoc
-// @Summary  Create a new Person
+// @Summary  Upload a new Photo
 // @Accept   json
 // @Produce  json
-// @Param    firstName  body      string  true  "first name"
-// @Param    lastName   body      string  true  "last name"
-// @Param    age        body      int     true  "age"
-// @Success  202        {object}  Person
-// @Router   /person [post]
-func (a *API) handlePersonCreate(c echo.Context) error {
-	newPerson := new(Person)
-	err := json.NewDecoder(c.Request().Body).Decode(&newPerson)
+// @Param    name  body      string  true  "name of the photo"
+// @Success  202        {object}  Photo
+// @Router   /photo [post]
+func (a *API) handlePhotoUpload(c echo.Context, u *User) error {
+	newPhoto := new(Photo)
+
+	// get file information from formdata
+	form, err := c.MultipartForm()
+	if err != nil {
+		return err
+	}
+	defer form.RemoveAll()
+
+	mpf, err := c.FormFile("data")
 	if err != nil {
 		return c.JSON(http.StatusBadRequest, err)
 	}
+	filename := mpf.Filename
+	if fvname := c.FormValue("filename"); fvname != "" {
+		filename = fvname
+	}
 
-	a.DB.Save(&newPerson)
+	// open file
+	fi, err := mpf.Open()
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, err)
+	}
+	defer fi.Close()
 
-	return c.JSON(http.StatusCreated, newPerson)
+	// upload file to edge-ur
+
+	fileNode, err := a.LightNode.Node.AddPinFile(context.Background(), fi, nil)
+	size, err := fileNode.Size()
+	content := core.Content{
+		Name:             filename,
+		Size:             int64(size),
+		Cid:              fileNode.Cid().String(),
+		RequestingApiKey: viper.Get("API_KEY").(string),
+		Created_at:       time.Now(),
+		Updated_at:       time.Now(),
+	}
+
+	// queue file for uploading on edge-ur
+	a.LightNode.DB.Create(&content)
+
+	// add file to our own database
+	newPhoto.Owner = u
+	newPhoto.Name = filename
+	newPhoto.CID = content.Cid
+	a.DB.Save(&newPhoto)
+
+	return c.JSON(http.StatusCreated, newPhoto)
 }
 
-// handlePersonGet godoc
-// @Summary  Find a registered Person
+// handlePhotoDownload godoc
+// @Summary  Download existing photo
 // @Produce  json
-// @Param    firstName  query     string  true  "first name"
-// @Success  200        {object}  Person
-// @Router   /person/{firstName} [get]
-func (a *API) handlePersonGet(c echo.Context) error {
-	firstName := c.Param("firstName")
+// @Param    cid  query     string  true  "first name"
+// @Success  200        {object}  string
+// @Router   /photo/{cid} [get]
+func (a *API) handlePhotoDownload(c echo.Context, u *User) error {
+	cid := c.Param("cid")
 
-	var person Person
-	err := a.DB.Model(&Person{}).
-		Where("first_name = ?", firstName).
-		Scan(&person).
+	var photo Photo
+	err := a.DB.Model(&Photo{}).
+		Where("cid = ?", cid).
+		Scan(&photo).
 		Error
 	if err != nil {
 		return c.JSON(http.StatusNotFound, err)
 	}
 
-	return c.JSON(http.StatusCreated, person)
-}
+	// If photo is in the database, retrieve it
+	// TODO: retrieve photo
 
-// handlePersonUpdate godoc
-// @Summary  Update a registered Person
-// @Produce  json
-// @Param    firstName  query     string  true  "original first name"
-// @Param    firstName  body      string  true  "new first name"
-// @Param    lastName   body      string  true  "new last name"
-// @Param    age        body      int     true  "new age"
-// @Success  200        {object}  Person
-// @Router   /person/{firstName} [put]
-func (a *API) handlePersonUpdate(c echo.Context) error {
-	origFirstName := c.Param("firstName")
-
-	updatedPerson := new(Person)
-	err := json.NewDecoder(c.Request().Body).Decode(&updatedPerson)
-	if err != nil {
-		return c.JSON(http.StatusBadRequest, err)
-	}
-
-	err = a.DB.Model(&Person{}).
-		Where("first_name = ?", origFirstName).
-		Updates(*updatedPerson).
-		Error
-	if err != nil {
-		return c.JSON(http.StatusNotFound, err)
-	}
-
-	return c.JSON(http.StatusOK, updatedPerson)
-}
-
-// handlePersonDelete godoc
-// @Summary  Delete a registered Person
-// @Produce  json
-// @Param    firstName  query     string  true  "first name"
-// @Success  200 "deleted successfully"
-// @Success  404 "entry to delete not found"
-// @Router   /person/{firstName} [delete]
-func (a *API) handlePersonDelete(c echo.Context) error {
-	firstName := c.Param("firstName")
-
-	err := a.DB.Where("first_name = ?", firstName).Delete(&Person{}).Error
-	if err != nil {
-		return c.JSON(http.StatusNotFound, err)
-	}
-
-	return c.NoContent(http.StatusOK)
+	return c.JSON(http.StatusOK, photo)
 }
 
 func createDatabase() (*gorm.DB, error) {
-	db, err := gorm.Open(sqlite.Open("people.db"), &gorm.Config{})
+	db, err := gorm.Open(sqlite.Open("estuphotos.db"), &gorm.Config{})
 	if err != nil {
 		return nil, err
 	}
-	db.AutoMigrate(&Person{})
+	db.AutoMigrate(&Photo{})
+	db.AutoMigrate(&User{})
 
 	return db, nil
 }
@@ -154,10 +172,18 @@ func createDatabase() (*gorm.DB, error) {
 // @BasePath /
 // @schemes http
 func main() {
-	var log = logging.Logger("api")
+	var log = logging.Logger("estuphotos")
 	var api API
 	var err error
 
+	// start light edge-ur node
+	ctx := context.Background()
+	api.LightNode, err = core.NewCliNode(&ctx)
+	if err != nil {
+		log.Fatal("could not start lightNode: %s", err)
+	}
+
+	// start database
 	api.DB, err = createDatabase()
 	if err != nil {
 		log.Fatal("could not create or open database: %s", err)
@@ -168,10 +194,8 @@ func main() {
 	e.GET("/", api.handleIndex)
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 
-	e.DELETE("/person/:firstName", api.handlePersonDelete)
-	e.PUT("/person/:firstName", api.handlePersonUpdate)
-	e.POST("/person", api.handlePersonCreate)
-	e.GET("/person/:firstName", api.handlePersonGet)
+	e.POST("/photo", withUser(api.handlePhotoUpload))
+	e.GET("/photo/:cid", withUser(api.handlePhotoDownload))
 
 	e.Logger.Fatal(e.Start(":8080"))
 }
